force-app/main/default/objects/DevOps_Event__e/DevOps_Event__e.object-meta.xml
<CustomObject>
    <label>DevOps Event</label>
    <pluralLabel>DevOps Events</pluralLabel>
</CustomObject>