force-app/main/default/objects/DevOps_Event__e/fields/Additions__c.field-meta.xml
<CustomField>
    <fullName>Additions__c</fullName>
    <label>Additions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>