force-app/main/default/objects/DevOps_Event__e/fields/Changed_Files__c.field-meta.xml
<CustomField>
    <fullName>Changed_Files__c</fullName>
    <label>Changed Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>