force-app/main/default/objects/DevOps_Event__e/fields/Deletions__c.field-meta.xml
<CustomField>
    <fullName>Deletions__c</fullName>
    <label>Deletions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>