force-app/main/default/objects/DevOps_Event__e/fields/Is_Hotfix__c.field-meta.xml
<CustomField>
    <fullName>Is_Hotfix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hotfix</label>
    <type>Checkbox</type>
</CustomField>