force-app/main/default/objects/DevOps_Event__e/fields/PR_Author__c.field-meta.xml
<CustomField>
    <fullName>PR_Author__c</fullName>
    <label>PR Author</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>