force-app/main/default/objects/DevOps_Event__e/fields/Repo_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Repo_Full_Name__c</fullName>
    <label>Repo Full Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>